hard-gists/3816122/run.log
=== Docker Run Log for 3816122 ===
Started at: Mi 29. Okt 14:01:01 CET 2025

[2025-10-29 14:01:02] START: Running container for 3816122
[2025-10-29 14:01:02] SUCCESS: Container f4d6059d522b877dbe51fd9b8615e7d861c018b9b7339396d40714b5056f5b36 started for 3816122
=== Container logs for 3816122 ===
  File "/snippet.py", line 68
    print '# Info.plist with no identifier'
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 3816122 ===
[2025-10-29 14:01:04] INFO: Container f4d6059d522b877dbe51fd9b8615e7d861c018b9b7339396d40714b5056f5b36 has stopped
